--- a/Ruleta.html
+++ b/Ruleta.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <main class="project-page">
-        <h1>Sistema de Dashboard Empresarial</h1>
+        <h1>Ruleta</h1>
         
         <!-- Enlaces importantes -->
         <div class="button-group">
             <a href="index.html" class="project-button">
                 <i class="fas fa-arrow-left"></i> Volver al Portfolio
             </a>
-            <a href="https://tudashboard.com" target="_blank" class="project-button">
+            <a href="https://fenryr01.github.io/Ruleta/" target="_blank" class="project-button">
                 <i class="fas fa-external-link-alt"></i> Ver Proyecto en Vivo
             </a>
         </div>
@@ -26,14 +26,16 @@
         <!-- Descripción -->
         <h2>Descripción del Proyecto</h2>
         <p>
-            Plataforma de analytics en tiempo real con visualización de datos empresariales. Desarrollada con arquitectura moderna y escalable, incluye:
+            Esta herramienta fue utiliza para evaluar oralmente a los alumnos de una forma más dinámica y llamativa, sin la necesidad de utilizar internet, usando la consola de comando y “php -S localhost:8000” para simular una página web. La versión origina utiliza php para eliminar los contenidos del bloc de notas para evitar la repetición de nombres o preguntas.
+            <br><br>
+            Este proyecto es una página web diseñada para evaluar de forma oral los contenidos de geografía en secundaria, haciéndolo más dinámico e interactivo. Su funcionamiento se divide en tres etapas: primero, se selecciona aleatoriamente un estudiante desde una lista almacenada en un bloc de notas (en la versión original con PHP, el nombre se eliminaba tras ser elegido). Luego, se gira una ruleta que puede otorgar ventajas o desafíos, como "vale doble", "ayuda de un amigo" o "eliminar una opción". Finalmente, se elige una pregunta al azar junto con sus opciones de respuesta desde otro bloc de notas, eliminándola después de ser utilizada. Esto permite realizar evaluaciones más equitativas y motivadoras, incentivando la participación de los alumnos.
         </p>
-        <br>
+        <br><br>
+        <h4> Incluye:</h4>
         <ul>
-            <li>Gráficos interactivos y personalizables</li>
-            <li>Tableros de control configurables</li>
-            <li>Exportación de reportes en múltiples formatos</li>
-            <li>Sistema de alertas inteligentes</li>
+            <li><p>Selector de nombres de un bloc de notas</p></li>
+            <li><p>Ruleta con ventajas aleatorias</p></li>
+            <li><p>Selector de preguntas y opciones de un bloc de notas</p></li>
         </ul>
 
         <br><br>
@@ -41,16 +43,16 @@
         <h2>Galería del Proyecto</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="https://static.vecteezy.com/system/resources/previews/022/422/267/non_2x/wolf-silhouette-at-full-moon-design-vector.jpg" alt="Vista móvil">
+                <img src="https://i.ibb.co/8nBWRJQh/ruleta1.jpg" alt="ruleta1" border="0">            
             </div>
             <div class="gallery-item">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/022/422/261/small/wolf-silhouette-in-nature-design-vector.jpg" alt="Vista 2 del dashboard">
+                <img src="https://i.ibb.co/N25bgsQS/ruleta2.jpg" alt="ruleta2" border="0">            
             </div>
             <div class="gallery-item">
-                <img src="https://static.vecteezy.com/system/resources/previews/021/623/339/non_2x/wolf-outline-silhouette-vector.jpg" alt="Vista móvil">
+                <img src="https://i.ibb.co/mrYcW5Zy/ruleta3.jpg" alt="ruleta3" border="0">
             </div>
             <div class="gallery-item">
-                <img src="https://static.vecteezy.com/system/resources/previews/021/623/261/non_2x/wolf-outline-silhouette-vector.jpg" alt="Panel de configuración">
+                <img src="https://i.ibb.co/21KSt3zB/ruleta4.jpg" alt="ruleta4" border="0">
             </div>
         </div>
 
@@ -64,14 +66,10 @@
         <!-- Tecnologías -->
         <h2>Tecnologías Utilizadas</h2>
         <div class="technologies">
-            <span class="technology-tag">React</span>
-            <span class="technology-tag">TypeScript</span>
-            <span class="technology-tag">Node.js</span>
-            <span class="technology-tag">MongoDB</span>
-            <span class="technology-tag">AWS</span>
-            <span class="technology-tag">D3.js</span>
-            <span class="technology-tag">Docker</span>
-            <span class="technology-tag">GraphQL</span>
+            <span class="skill-tag html"><i class="fab fa-html5"></i> HTML</span>
+            <span class="skill-tag css"><i class="fab fa-css3-alt"></i> CSS</span>
+            <span class="skill-tag js"><i class="fab fa-js"></i> JavaScript</span>
+            <span class="skill-tag php"><i class="fab fa-php"></i> PHP</span>
         </div>
 
     </main>
