--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </a>
             </p>
             <div class="button-group">
-                <a href="tu-cv.pdf" download="Mi_CV.pdf" class="project-button">
+                <a href="https://drive.google.com/file/d/1YCXn9UXT3qrx7KoccPJQc7BjkGKf6Im7/view?usp=sharing" class="project-button">
                     DESCARGAR CV
                 </a>
             </div>            
@@ -67,18 +67,18 @@
                     </div>
                     <div class="project-content">
                         <h4>H.A.T.I.</h4>
-                        <p>Este proyecto es una aplicación educativa similar a Google Classroom, pero enfocada en el aprendizaje a través de juegos. Los docentes pueden crear clases y, en lugar de asignar tareas, subir juegos basados en los contenidos de sus materias. Los alumnos se unen a la clase y pueden jugar a los juegos personalizados según la configuración del docente, haciendo que el aprendizaje sea más dinámico e interactivo.</p>
+                        <p>Este proyecto es una aplicación educativa similar a Google Classroom, pero enfocada en el aprendizaje a través de juegos. Los docentes pueden crear clases y, en lugar de asignar tareas, subir los contenidos de sus materias como multiple choice. Los alumnos se unen a la clase y pueden jugar estos son personalizados según la configuración del docente, haciendo que el aprendizaje sea más dinámico e interactivo.</p>
                     </div>
                 </a>
 
                 <!-- Card 3 -->
                 <a href="Ruleta.html" class="project-card">
                     <div class="project-image">
-                        <img src="https://media.istockphoto.com/id/1248197297/es/vector/silueta-de-aullida-de-lobo-con-gran-luna-llena.jpg?s=612x612&w=0&k=20&c=vyA6J5x4fsubGZcIzUSz1zNTaEoyCStgBEW_bxelRKM=" alt="Aplicación E-commerce">
+                        <img src="https://i.ibb.co/mrYcW5Zy/ruleta3.jpg" alt="ruleta3" border="0">
                     </div>
                     <div class="project-content">
                         <h4>Ruleta</h4>
-                        <p>Tienda online con carrito de compras y pasarela de pagos integrada.</p>
+                        <p>Página web para evaluar oralmente geografía en secundaria, seleccionando al azar un estudiante, una condición especial con una ruleta y una pregunta con opciones de un bloc de notas.</p>
                     </div>
                 </a>
             </div>
@@ -87,8 +87,10 @@
         <section id="education">
             <h2>Educación</h2>
             <div>
-                <h4>Ingeniería en Sistemas</h4>
-                <p>Universidad Tecnológica Nacional - 2010-2015</p>
+                <h4>Profesor de Educación Secundaria en Geografía</h4>
+                <p>Instituto de Formación Docente Nº 168 - 2015</p>
+                <h4>Desarrollador de Software</h4>
+                <p>Instituto Superior de Formación Docente y Técnica Nº 26 - 2024</p>
             </div>
         </section>
 
@@ -114,7 +116,7 @@
                   </a>
                 <a href="https://wa.me/549123456789" class="contact-item">
                     <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
-                    2245421914
+                    +54 2245 421914
                 </a>
                 <a href="https://www.linkedin.com/in/diego-selva-6714782a8/" class="contact-item">
                     <img src="https://img.icons8.com/color/48/linkedin.png" alt="LinkedIn">
