--- a/Accesibilidad.html
+++ b/Accesibilidad.html
@@ -26,7 +26,7 @@
         <!-- Descripción -->
         <h2>Descripción del Proyecto</h2>
         <p>
-            El proyecto esta subido en Render, lo que demora unos 5 min aproximadamente en cargar la página.  
+            El proyecto esta subido en Render, lo que demora unos 5 min aproximadamente en cargar la página. Pueden ingresar con la cuenta de usuario at y contraseña at. 
             <br><br>
             El proyecto es una página web diseñada para la Dirección de Accesibilidad de la ciudad de Dolores, con el propósito de mejorar la gestión y el acceso a la información relacionada con las personas con discapacidad en la comunidad. La plataforma incluye una sección informativa sobre la dirección y una página de contacto para facilitar la comunicación con los ciudadanos.
             <br><br>
